# FaceVerification

./: .flake8  .flake8_tests  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile  post-start.sh
helm/face-verification/: Chart.yaml  values.yaml
helm/face-verification/templates/: NOTES.txt  configmap.yml  deployment.yaml  service.yaml
helm/face-verification/values/: test.yml
kuber/: configmap.yml  deployment.yml  pod.yml  service.yml
src/app/: config.py  logic  logic.py  main.py
src/app/db/: crud.py  db_helper.py  models.py
src/app/face_verification/: urls.py  views.py
src/tests/: test_logic.py
src/tests/integration/: conftest.py  test_urls.py
src/tests/unit/: conftest.py
src/tests/unit/face_verification/: test_views.py
