[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deepface = "^0.0.92"
tf-keras = "^2.16.0"
tensorflow = "^2.16.2"
fastapi = "^0.111.1"
pytest-asyncio = "^0.23.8"
brotli = "^1.1.0"
aiokafka = "^0.11.0"
pydantic-settings = "^2.4.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
mypy = "^1.10.1"
black = "^24.4.2"
coverage = "^7.5.4"
coverage-threshold = "^0.4.4"

[tool.isort]
multi_line_output = '3'
include_trailing_comma = 'True'
force_grid_wrap = '0'
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = '79'

[tool.pytest.ini_options]
pythonpath = ". src"
testpaths = ["src/tests"]

[tool.coverage.run]
command_line = "-m pytest"

[tool.mypy]
disable_error_code = 'import-untyped'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
